# Minesweeper-SDL2

./: CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp  minesweeper.cpp  minesweeper.hpp  textures.cpp  textures.hpp
src/inc/: profiler.hpp  vectors.cpp  vectors.hpp
